# my_pico_projects

./: LICENSE  README.md
FreeRTOS_Blink/: CMakeLists.txt
FreeRTOS_Blink/inc/: FreeRTOSConfig.h  i2c_mpu9250.h
FreeRTOS_Blink/src/: i2c_mpu9250.cpp  main.cpp
i2c_aht10/: .ycm_extra_conf.py  CMakeLists.txt  README.md  main.cpp
i2c_aht10/.cache/clangd/index/: AHT10.cpp.2F31938673FFDF08.idx  AHT10.h.45A5B3D4AC1A4F3D.idx  main.cpp.AEFCC1C46B582F43.idx
i2c_aht10/inc/: AHT10.h
i2c_aht10/src/: AHT10.cpp
i2c_bmp280/: CMakeLists.txt  README.md  compile_commands.json  main.cpp  tags
i2c_bmp280/.cache/clangd/index/: BMP280.cpp.CBA43F0E83CDC734.idx  BMP280.h.FA51F43AC961DDB6.idx  main.cpp.3E376ABA74445A02.idx
i2c_bmp280/inc/: BMP280.h
i2c_bmp280/src/: BMP280.cpp
i2c_cjmcu811/: CMakeLists.txt  main.cpp
i2c_cjmcu811/.cache/clangd/index/: i2c_cjmcu811.cpp.88607D765F9F8502.idx  i2c_cjmcu811.h.78FA41F845FC5DF8.idx  main.cpp.39D4151C7E8476ED.idx
i2c_cjmcu811/inc/: i2c_cjmcu811.h
i2c_cjmcu811/src/: i2c_cjmcu811.cpp
i2c_mpu9250/: CMakeLists.txt  i2c_mpu9250.c  main.cpp  mpu9250.h  tags
i2c_mpu9250/.cache/clangd/index/: MPU9250_RegisterMap.h.77A51F65620C278C.idx  i2c_mpu9250.c.6C2257A144E0075F.idx  i2c_mpu9250.c.86C5A89EAC052940.idx  i2c_mpu9250.cpp.E3AECDA690AB9369.idx  i2c_mpu9250.h.264F106EA01C8F3A.idx  main.cpp.C76EF7B732F2EE16.idx  mpu9250.h.DEEBC9328689646E.idx
i2c_mpu9250/inc/: MPU9250_RegisterMap.h  i2c_mpu9250.h
i2c_mpu9250/src/: i2c_mpu9250.cpp
nrf24/: CMakeLists.txt  NRF24.cpp  NRF24.h  main.cpp  nRF24L01.h
nrf24/.cache/clangd/index/: NRF24.cpp.55CED4FA9DE46CAF.idx  NRF24.h.D12ADFC0CF7CC0EB.idx  main.cpp.DDFE3042568AA444.idx  nRF24L01.h.B0FE76F84ADD2FD9.idx
